kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crypto-service
  labels:
    app: crypto-app
  namespace: development
spec:
  selector:
    app: crypto-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: NodePort
